Grace/tests/gibbs/errors/t214.grace
// ERROR = P1001
object {
